--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
   
     function log(message) {
       const logDiv = document.getElementById("log");
+      if (!logDiv) return; // ⛑ Failsafe
       logDiv.textContent += message + '\n';
       logDiv.scrollTop = logDiv.scrollHeight;
     }
