fixed syntax error

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         attack,
         defense,
         crit,
-        usedAbility: false 
+        usedAbility: false, 
         inventory: {
           healthPotion: 1 // start with 1 potion
         }
